Add basic navigation for adding new campground

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -19,5 +19,6 @@
         </div>
         <button>Add Campground</button>
     </form>
+    <a href="/campgrounds">Back to all campgrounds</a>
 </body>
 </html>
