--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Campground</title>
-</head>
-<body>
+<% layout('layouts/boilerplate') %>   
     <h1>Edit Campground</h1>
     <!-- Method override - _method label set in app.js - fakes POST request into PUT-->
     <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
@@ -22,5 +14,3 @@
         <button>Update Campground</button>
     </form>
     <a href="/campgrounds/<%= campground._id %>">Back to campground</a>
-</body>
-</html>
