--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -4,18 +4,27 @@
         <!-- Offset to center -->
         <div class="col-6 offset-3">
             <!-- Method override - _method label set in app.js - fakes POST request into PUT-->
-            <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
+            <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate class="validated-form">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
-                    <input class="form-control" type="text" id="title" name="campground[title]" value="<%=campground.title%>">
+                    <input class="form-control" type="text" id="title" name="campground[title]" value="<%=campground.title%>" required>
+                    <div class="valid-feedback">
+                        Great!
+                    </div>
                 </div>        
                 <div class="mb-3">
                     <label class="form-label" for="location">Location</label>
-                    <input class="form-control" type="text" id="location" name="campground[location]" value="<%=campground.location%>">
+                    <input class="form-control" type="text" id="location" name="campground[location]" value="<%=campground.location%>" required>
+                    <div class="valid-feedback">
+                        Great!
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="image">Image Url</label>
-                    <input class="form-control" type="text" id="image" name="campground[image]" value="<%=campground.image%>">
+                    <input class="form-control" type="text" id="image" name="campground[image]" value="<%=campground.image%>" required>
+                    <div class="valid-feedback">
+                        Great!
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="price">Campground Price</label>
@@ -23,12 +32,18 @@
                         <span class="input-group-text" id="price-label">
                             $
                         </span>
-                        <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price" name="campground[price]" aria-describedby="price-label" value="<%=campground.price%>">
+                        <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price" name="campground[price]" aria-describedby="price-label" value="<%=campground.price%>" required>
+                        <div class="valid-feedback">
+                            Great!
+                        </div>
                     </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="desctiption">Description</label>
-                    <textarea class="form-control" type="text" id="description" name="campground[description]"><%=campground.description%></textarea>
+                    <textarea class="form-control" type="text" id="description" name="campground[description]" required><%= campground.description %></textarea>
+                    <div class="valid-feedback">
+                        Great!
+                    </div>
                 </div>
                 <div class="mb-3">
                     <button class="btn btn-info">Update Campground</button>
