--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -3,31 +3,46 @@
     <h1 class="text-center">New Campground</h1>
         <!-- Offset to center -->
         <div class="col-6 offset-3">
-            <form action="/campgrounds" method="POST">
+            <form action="/campgrounds" method="POST" novalidate class="validated-form">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
-                    <input class="form-control" type="text" id="title" name="campground[title]">
+                    <input class="form-control" type="text" id="title" name="campground[title]" required>
+                    <div class="valid-feedback">
+                        Great!
+                    </div>
                 </div>        
                 <div class="mb-3">
                     <label class="form-label" for="location">Location</label>
-                    <input class="form-control" type="text" id="location" name="campground[location]">
+                    <input class="form-control" type="text" id="location" name="campground[location]" required>
+                    <div class="valid-feedback">
+                        Great!
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="image">Image Url</label>
-                    <input class="form-control" type="text" id="image" name="campground[image]">
+                    <input class="form-control" type="text" id="image" name="campground[image]" required>
+                    <div class="valid-feedback">
+                        Great!
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="price">Campground Price</label>
                     <div class="input-group">
-                        <span class="input-group-text" id="price-label">
+                        <span class="input-group-text" id="price-label" required>
                             $
                         </span>
-                        <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price" name="campground[price]" aria-describedby="price-label">
+                        <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price" name="campground[price]" aria-describedby="price-label" required>
+                        <div class="valid-feedback">
+                            Great!
+                        </div>
                     </div>
                 </div>
                 <div class="mb-3">
-                    <label class="form-label" for="desctiption">Description</label>
-                    <textarea class="form-control" type="text" id="description" name="campground[description]"></textarea>
+                    <label class="form-label" for="description">Description</label>
+                    <textarea class="form-control" type="text" id="description" name="campground[description]" required></textarea>
+                    <div class="valid-feedback">
+                        Great!
+                    </div>
                 </div>
                 <div class="mb-3">
                     <button class="btn btn-success">Add Campground</button>
